# DOCUMENT-CLASSIFIER

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCH.md  CLAUDE.md  COLLABORATION.md  DECISIONS.md  LICENSES.md  README.md  RUNBOOK.md  SECURITY.md  alembic.ini  docker-compose.yml
.github/workflows/: ci.yml
.opencode/plans/: day0-execution-plan.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_prediction_comments.py  0003_prediction_latency.py  0004_document_name.py
backend/app/: config.py  main.py
backend/app/api/: auth.py  deps.py
backend/app/api/routers/: audit.py  auth.py  batches.py  predictions.py  scan.py  users.py
backend/app/classifier/: overlay.py  predictor.py  startup_checks.py
backend/app/classifier/eval/: golden.py  golden_expected.json
backend/app/classifier/eval/golden_images/: advertisement_01711.tif  advertisement_02043.tif  budget_00192.tif  budget_01123.tif  budget_01854.tif  email_00967.tif  email_01326.tif  email_01598.tif  file folder_00236.tif  file folder_00260.tif  file folder_00958.tif  form_00698.tif  form_01272.tif  form_02126.tif  handwritten_00871.tif  handwritten_01256.tif  handwritten_01662.tif  invoice_00401.tif  invoice_00959.tif  invoice_01546.tif  invoice_01743.tif  letter_00278.tif  letter_01184.tif  letter_01345.tif  letter_01649.tif  memo_01024.tif  memo_01413.tif  memo_01779.tif  memo_02323.tif  news article_01056.tif  news article_02016.tif  presentation_00902.tif  presentation_01118.tif  presentation_01268.tif  presentation_01968.tif  questionnaire_00334.tif  questionnaire_00973.tif  questionnaire_01208.tif  questionnaire_01822.tif  resume_00098.tif  (+10 more)
backend/app/classifier/models/: classifier.pt  model_card.json
backend/app/db/: models.py  session.py
backend/app/domain/: contracts.py
backend/app/infra/: __init__.py  blob.py  cache.py  queue.py  sftp.py  vault.py  worker_blob.py  worker_prediction_service.py
backend/app/infra/casbin/: policy.csv
backend/app/repositories/: __init__.py  _mapping.py  audit_repo.py  batch_repo.py  document_repo.py  interfaces.py  prediction_repo.py  user_repo.py
backend/app/services/: audit_service.py  batch_service.py  interfaces.py  prediction_service.py  user_service.py
backend/scripts/: benchmark_latency.py  demo_pipeline.py  scp_demo.sh
backend/sftp_ingest/: __main__.py  main.py  processor.py  validation.py
backend/tests/: pyproject.toml
backend/tests/api/: conftest.py  test_auth.py  test_batches.py  test_predictions.py  test_users.py
backend/tests/classifier/: test_overlay.py  test_predictor.py  test_startup_checks.py
backend/tests/fakes/: audit_service.py  batch_repo.py  blob.py  prediction_repo.py  prediction_service.py  user_repo.py
backend/tests/infra/: test_blob.py  test_queue.py  test_sftp.py  test_vault.py
backend/tests/repositories/: test_document_repo.py  test_prediction_audit_repos.py  test_user_batch_repos.py
backend/tests/services/: test_audit_service.py  test_prediction_service.py  test_user_service.py
backend/tests/sftp_ingest/: test_processor.py  test_validation.py
backend/tests/smoke/: test_full_stack.py
backend/tests/worker/: test_worker_handler.py
backend/worker/: __main__.py  handler.py
docker/: api.Dockerfile  migrate.Dockerfile  sftp_ingest.Dockerfile  vault-init.sh  worker.Dockerfile
docker/sftp/: fix-permissions.sh
docs/: blob_layout.md  erd.md  tiny_rebex_sftp_server.tx  vault_paths.md
docs/reports/: full_real_stack_demo_plan.md  m2_progress.md  project_overview_1.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: AdminUsersPage.test.tsx  LoginPage.test.tsx  setup.ts  useAuth.test.ts
frontend/src/api/: client.ts  types.ts
reports/: 001_sqlalchemy_models.md  002_initial_alembic_migration.md  003_repositories.md  004_prediction_contract_alignment.md  005_infra_adapters.md  006_sftp_ingest_worker.md  007_document_repository_ingest_rows.md  008_audit_service.md  009_sftp_ingest_refactor.md  010_sftp_ingest_tests.md  011_document_repository_tests.md  012_lightweight_member3_test_env.md  013_member3_unit_test_expansion.md  014_dockerfiles_compose_update.md  015_ci_and_smoke_test.md  015_fake_full_demo_summary.md
scripts/: enqueue_local.py
tasks/: member1.md  member2.md  member3.md  plan.md  shared_tasks.md
(+18 files in other folders)
