[project]
name = "doc-classifier"
version = "0.1.0"
description = "Authenticated document classification service for RVL-CDIP"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "torchvision>=0.19",
    "pydantic>=2",
    "pydantic-settings>=2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "fastapi-users[sqlalchemy]>=13",
    "casbin>=1.36",
    "casbin-sqlalchemy-adapter>=1.4",
    "fastapi-cache2[redis]>=0.2",
    "rq>=1.16",
    "sqlalchemy[asyncio]>=2",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "hvac>=2.3",
    "minio>=7.2",
    "paramiko>=3.4",
    "httpx>=0.27",
    "tenacity>=8.3",
    "structlog>=24.1",
    "pillow>=10.3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "httpx>=0.27",
    "testcontainers>=4.4",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "golden: golden-set replay tests",
    "smoke: full-stack smoke tests",
]