[project]
name = "doc-classifier"
version = "0.1.0"
description = "Authenticated document classification service for RVL-CDIP"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "torchvision>=0.19",
    "pydantic>=2",
    "pydantic-settings>=2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "fastapi-users[sqlalchemy]>=13",
    "casbin>=1.36",
    "casbin-sqlalchemy-adapter>=1.4",
    "fastapi-cache2[redis]>=0.2",
    "rq>=1.16",
    "sqlalchemy[asyncio]>=2",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "hvac>=2.3",
    "minio>=7.2",
    "paramiko>=3.4",
    "httpx>=0.27",
    "tenacity>=8.3",
    "structlog>=24.1",
    "pillow>=10.3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "httpx>=0.27",
    "testcontainers>=4.4",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

# Route torch/torchvision to the CPU-only wheel index so no CUDA packages are pulled in.
# The API and worker run on CPU inference (p95 < 1s is achievable on CPU for ConvNeXt Tiny).
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "SIM", "TCH"]
ignore = [
    "B008",   # FastAPI requires Depends() in function default arguments
    "TCH001", # TYPE_CHECKING blocks break FastAPI's runtime get_type_hints resolution
    "TCH002", # Same as TCH001 for third-party imports
    "TCH003", # Same as TCH001 for stdlib imports
    "ANN401", # Allow Any where unavoidable (e.g. lifespan, JSONB metadata)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# audit_service.py is M3's deliverable — ignore until M3 merges it
module = ["app.services.audit_service"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "casbin",
    "casbin_sqlalchemy_adapter",
    "fastapi_cache",
    "fastapi_cache.*",
    "hvac",
    "hvac.*",
    "paramiko",
    "redis",
    "redis.*",
    "minio",
    "minio.*",
    "requests",
    "requests.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "golden: golden-set replay tests",
    "smoke: full-stack smoke tests",
]